Initial implementation of the ALU.
Implemented ITickable for components that receive a clock tick.
Started implementing the base CPU class.

--- a/VonNeumannVM/VonNeumannVM.vcxproj
+++ b/VonNeumannVM/VonNeumannVM.vcxproj
@@ -80,6 +80,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Src\ITickable.h" />
     <ClInclude Include="Src\Registers\Accumulator.h" />
     <ClInclude Include="Src\Registers\AddressRegister.h" />
     <ClInclude Include="Src\ALU.h" />
