--- a/VonNeumannVM/VonNeumannVM.vcxproj.filters
+++ b/VonNeumannVM/VonNeumannVM.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClInclude Include="Src\Registers\IRegister.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Src\ITickable.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\Memory.cpp">
